# hart-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
ad5700/: Cargo.toml
ad5700/src/: asynch.rs  blocking.rs  error.rs  lib.rs  master.rs
docs/superpowers/plans/: 2026-04-03-hart-rs-phase1.md  2026-04-03-hart-rs-phase2.md  2026-04-03-hart-rs-phase3.md
docs/superpowers/specs/: 2026-04-03-hart-rs-design.md  hart-test-vectors.txt  hart-unit-codes.md
embassy-hart/: Cargo.toml
embassy-hart/src/: lib.rs  master.rs
examples/hart-stm32h7/: Cargo.toml  README.md
examples/hart-stm32h7/.cargo/: config.toml
examples/hart-stm32h7/src/: main.rs
hart-protocol/: Cargo.toml
hart-protocol/src/: consts.rs  decode.rs  encode.rs  error.rs  lib.rs  packed_string.rs  types.rs  units.rs
hart-protocol/src/commands/: cmd0.rs  cmd1.rs  cmd11.rs  cmd12.rs  cmd13.rs  cmd14.rs  cmd15.rs  cmd16.rs  cmd17.rs  cmd18.rs  cmd19.rs  cmd2.rs  cmd20.rs  cmd22.rs  cmd3.rs  cmd38.rs  cmd48.rs  cmd6.rs  cmd7.rs  cmd8.rs  cmd9.rs  mod.rs  read_additional_status.rs  read_device_id.rs  read_device_info.rs  read_device_vars.rs  read_dynamic_var_class.rs  read_dynamic_vars.rs  read_final_assembly.rs  read_long_tag.rs  read_loop_config.rs  read_loop_current.rs  read_message.rs  read_primary_variable.rs  read_pv_transducer_info.rs  read_tag_descriptor_date.rs  read_unique_id_by_tag.rs  reset_config_changed.rs  write_final_assembly.rs  write_long_tag.rs  (+3 more)
hart-protocol/tests/: test_vectors.rs
