[package]
name = "embassy-hart"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Async HART master for Embassy — combines AD5700-1 modem driver with hart-protocol codec"
keywords = ["hart", "embassy", "async", "embedded", "industrial"]
categories = ["embedded", "no-std", "asynchronous"]
readme = "../README.md"

[dependencies]
hart-protocol = { version = "0.1.0", path = "../hart-protocol" }
ad5700 = { version = "0.1.0", path = "../ad5700" }
embassy-time = "0.4"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io = "0.7"
embedded-io-async = "0.7"
