[package]
name = "hart-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "no_std HART protocol codec for embedded systems — frame encoding/decoding, typed commands, engineering unit codes"
keywords = ["hart", "protocol", "embedded", "no-std", "industrial"]
categories = ["embedded", "no-std", "encoding"]
readme = "../README.md"

[dependencies]
heapless = "0.8"
