[package]
name = "hart-stm32h7-example"
version = "0.1.0"
edition = "2021"

[dependencies]
hart-protocol = { path = "../../hart-protocol" }
ad5700 = { path = "../../ad5700" }
embassy-hart = { path = "../../embassy-hart" }
embassy-executor = { version = "0.7", features = ["arch-cortex-m"] }
embassy-stm32 = { version = "0.3", features = ["stm32h745xi-cm4", "time-driver-any"] }
embassy-time = "0.4"
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
